# 2DGameEngine

./: .gitignore  CMakeLists.txt  Input.cpp  Input.h  Main.cpp  Quad.cpp  Quad.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  glad.c  glad.h  main.cpp
Shaders/: Main.frag  Main.vert
