cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# find_package(OpenGL REQUIRED)
# find_package(X11 REQUIRED)
# find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
project(hello VERSION 1.0)
add_executable(hello main.cpp glad.c Input.cpp Screen.cpp)
target_include_directories(hello PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(hello GL GLEW glfw3 X11)
