cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# find_package(OpenGL REQUIRED)
# find_package(X11 REQUIRED)
# find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
project(hello VERSION 1.0)
add_executable(hello glad.c Main.cpp  Input.cpp Shader.cpp Screen.cpp Quad.cpp)
target_include_directories(hello PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(hello GL glfw3 X11)
file( COPY ${CMAKE_CURRENT_SOURCE_DIR}/Shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )